# your-own-adventure

./: README.md
backend/: database.db  main.py  pyproject.toml
backend/core/: config.py  models.py  story_generator.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: job.py  story.py
backend/schemas/: story.py
frontend/: vite.config.js
frontend/src/: App.jsx
frontend/src/components/: LoadingStatus.jsx  StoryGenerator.jsx  StoryLoader.jsx  ThemeInput.jsx
